# fraud-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app/: db.py  gradio_app.py  main.py  schemas.py
app/api/: routes.py
app/config/: config.py
app/db/: db.py
app/services/: drift_service.py  ml_service.py
app/ui/: gradio_app.py
models/: LightGBM_best.joblib  LightGBM_best.onnx  LogisticRegression_best.joblib  LogisticRegression_best.onnx  LogisticRegression_best.pkl  RandomForest_best.joblib  RandomForest_best.onnx  XGBoost_best.pkl  logistic_regression.pkl
monitoring/: monitor_drift.py
notebooks/: base.ipynb  deeplearning.ipynb  hyperparameter.ipynb  quickstart.ipynb
reports/: data_drift_report.json
results/: lgb_best_params.json  logreg_best_params.json  model_comparison.csv  rf_best_params.json  xgb_best_params.json
src/: data_preprocessing.py  explainability.py  run_data_prep.py  train.py  train_and_evaluate.py  tune_models.py
